<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">CSCI588-FantasyFootball</string>
    <string name="header">WEEK 9 GAMEDAY CENTER</string>
    <string name="myLineup">My Lineup</string>
    <string name="myMatchup">My Matchup</string>
    <string name="myLeague">My League</string>
    <string name="midweekheader">WEEK 9</string>
    <string name="winlossrecord">Win/Loss Record:</string>
    <string name="rankstr">Rank:</string>
    <string name="addPlayersStr">Add Players</string>
    <string name="editLineupStr">Edit Lineup</string>
    <string name="tradeStr">Trade</string>
    <string name="vsstr">vs</string>
    <string name="position">Pos.</string>
    <string name="qb_string">QB</string>
    <string name="rb1_string">RB1</string>
    <string name="rb2_string">RB2</string>
    <string name="wr1_string">WR1</string>
    <string name="wr2_string">WR2</string>
    <string name="te_string">TE</string>
    <string name="k_string">K</string>
    <string name="starting_lineup">Starting Lineup</string>
    <string name="bench_players">Bench Players</string>
    <string name="playerName">Name</string>
	<string name="bench">BN</string>
	<string name="search_label">Search</string>
	<string name="search_hint">Type in First/Last Name of player</string>
	<string name="leagueStandingsHeader">League Standings</string>
	<string name="otherMatchups">Other Matchups</string>
	<string name="filter">Filter: ALL</string>
	<string name="standingsStr">Standings</string>
	<string name="pointsStr">Points</string>
	<string name="wltStr">W-L-T</string>
	<string name="gameday">Gameday View</string>
	<string name="midweek">Midweek View</string>
	<string name="driverHeader">Choose what starting interface you want!</string>
	<string name="viewMatchup">View Matchup</string>
</resources>
