<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:text="@string/leagueStandingsHeader" />
        
    <TextView
        android:id="@+id/standingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_header"
        android:layout_marginRight="4dp"
        android:text="@string/standingsStr" />
    
	<TextView
		android:id="@+id/points"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/standingsLabel" 
		android:layout_alignParentRight="true"
    	android:layout_marginLeft="50dp"
   	 	android:layout_marginRight="20dp"
   	 	android:textSize="12sp"
    	android:text="@string/pointsStr"/>	

	<TextView
		android:id="@+id/wlt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@+id/points" 
		android:layout_below="@+id/standingsLabel" 
    	android:layout_marginLeft="50dp"
    	android:layout_marginRight="10dp"
   	 	android:textSize="12sp"
    	android:text="@string/wltStr"/>	       
       
 	<ScrollView 
		android:id="@+id/standingsScroll"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/points"
		android:layout_above="@+id/buttons"
		android:layout_centerHorizontal="true">
		  <LinearLayout
		  	android:id="@+id/standings"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1">
		    </LinearLayout>
	</ScrollView> 
	
</RelativeLayout>
