<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/teamPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/teamPic"
        android:textSize="16sp"
        android:textColor="@color/mainScreenText"
        android:text="TextView" />

    <TextView
        android:id="@+id/weekNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teamName"
        android:textSize="16sp"
        android:layout_below="@+id/teamName"
        android:text="TextView" />

    <TextView
        android:id="@+id/weekScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weekNum"
        android:layout_marginLeft="26dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_toRightOf="@+id/weekNum"
        android:text="TextView" />

    <TextView
        android:id="@+id/currentRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weekNum"
        android:layout_below="@+id/weekNum"
        android:textSize="16sp"
        android:text="TextView" />

    <TextView
        android:id="@+id/startingLineup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentRank"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/starting_lineup" />
<LinearLayout
    	android:id="@+id/position"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:background="@color/type_bg_col"
    	android:layout_alignParentLeft="true"
        android:layout_below="@+id/startingLineup"
        android:orientation="vertical">
    <TextView
        android:id="@+id/position1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/startingLineup"        
        android:background="@color/pos_col"
        android:textColor="@color/type_col"
        android:text="@string/position" />

    <TextView
        android:id="@+id/qb_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:layout_below="@+id/position"
        android:background="@color/type_bg_col"
        android:text="@string/qb_string" />

    <TextView
        android:id="@+id/rb1_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/qb_pos"
        android:textSize="16sp"
        android:background="@color/type_bg_col"
        android:text="@string/rb1_string" />

    <TextView
        android:id="@+id/rb2_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rb1_pos"
        android:textSize="16sp"
        android:background="@color/type_bg_col"
        android:text="@string/rb2_string" />

    <TextView
        android:id="@+id/wr1_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rb2_pos"
        android:textSize="16sp"
        android:background="@color/type_bg_col"
        android:text="@string/wr1_string" />

    <TextView
        android:id="@+id/wr2_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:layout_below="@+id/wr1_pos"
        android:background="@color/type_bg_col"
        android:text="@string/wr2_string" />
    
    <TextView
        android:id="@+id/te_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:background="@color/type_bg_col"
        android:layout_below="@+id/wr2_pos"
        android:text="@string/te_string" />
    
     <TextView
        android:id="@+id/k_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:background="@color/type_bg_col"
        android:layout_below="@+id/te_pos"
        android:text="@string/k_string" />
     
     </LinearLayout>
<HorizontalScrollView
    android:id="@+id/roster_lineup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/position"
        android:layout_below="@+id/startingLineup">
    </HorizontalScrollView>

<TextView
    android:id="@+id/bench_players"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/position"
    android:text="@string/bench_players" />
    
    

<HorizontalScrollView
    android:id="@+id/bench_lineup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/bench_players"
    android:layout_alignParentLeft="true">

    </HorizontalScrollView>
</RelativeLayout>
</ScrollView>
</RelativeLayout>